[project]
name = "leetcode-dailies"
version = "0.0.1"
description = "yyolk's daily leetcode.com solutions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "markdownify",
    "black",
    "BeautifulSoup4",
    "gql[aiohttp]",
    "requests",
]

[tool.pylint."messages control"]
disable = ["unspecified-encoding"]

[tool.ruff.lint]
# F821: LeetCode solution files use runtime-provided classes (TreeNode, ListNode, etc.)
# that are not imported in the file but are available in the LeetCode execution environment.
ignore = ["F821"]
