[project]
name = "leetcode-dailies"
version = "0.0.1"
description = "yyolk's daily leetcode.com solutions"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "markdownify",
    "black",
    "ruff",
    "BeautifulSoup4",
    "gql[aiohttp]",
    "requests",
    "pre-commit>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pylint."messages control"]
disable = ["unspecified-encoding"]

[tool.ruff.lint]
# F821: LeetCode solution files use runtime-provided classes (TreeNode, ListNode, etc.)
# that are not imported in the file but are available in the LeetCode execution environment.
ignore = ["F821", "E741"]
